--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bullhorse Africa</title>
+    <title>Bullhorse Africa - Quality Truck Spares & Reliable Prices</title>
     <link rel="stylesheet" href="./src/styles/main.css">
 </head>
 <body>
-    
+    <header id="navigation"></header>
+
     <main>
         <section id="landing-section"></section>
         <section id="products-section"></section>
